--- a/2. CSS/07. 적용, 색상, 단위, color, 속성 (CSS).md
+++ b/2. CSS/07. 적용, 색상, 단위, color, 속성 (CSS).md
@@ -41,11 +41,11 @@
     * 색상 값
 # 속성
 * CSS의 속성(Property)를 적용하기 위해 아래와 같이 작성한다.
-    ```
-    [선택자] {
-        [속성 이름] : [값];
-    }
-    ```
-    * 선택자를 작성하고 중괄호( {} )를 사용하여 속성을 작성할 수 있다
-    * 속성은 속성 이름 을 작성하고 콜론 ( : )을 적은 뒤 세미 콜론( ; )으로 끝낸다
-    * 하나의 선택자에 여러개의 속성을 작성할 수 있다
+>```CSS
+>[선택자] {
+>    [속성 이름] : [값];
+>}
+>```
+>* 선택자를 작성하고 중괄호( {} )를 사용하여 속성을 작성할 수 있다
+>* 속성은 속성 이름 을 작성하고 콜론 ( : )을 적은 뒤 세미 콜론( ; )으로 끝낸다
+>* 하나의 선택자에 여러개의 속성을 작성할 수 있다
