--- a/4. DBMS/02.사용자.md
+++ b/4. DBMS/02.사용자.md
@@ -4,29 +4,29 @@
 * 이러한 root 계정은 모든 권한을 가지고 있어 보안에 취약함으로 실무 프로덕트,프로젝트에서는 사용되지 않는다
 ## 생성하기
 * 새로운 사용자를 생성하기 위해 아래 쿼리를 실행한다
-    ```db
-    CREATE USER `이름`@`호스트` IDENTIFIED BY '비밀번호';
-    ```
-    * 이름과 호스트는 구성요소임으로 ( ` )으로 감싸고
-    * 비밀번호는 문자열임으로 홑따옴표( ' )로 감싼다
-    * 예시로 사용자 이름이 study 이고 호스트가 localhost 이며 비밀번호가 test1234인 사용자를 생성하기 위해서는 아래의 쿼리를 실행한다
-    ```db
-    CREATE USER `study`@`localhost` IDENTIFIED BY 'test1234';
-    ```
+>```sql
+>CREATE USER `이름`@`호스트` IDENTIFIED BY '비밀번호';
+>```
+>* 이름과 호스트는 구성요소임으로 ( ` )으로 감싸고
+>* 비밀번호는 문자열임으로 홑따옴표( ' )로 감싼다
+>* 예시로 사용자 이름이 study 이고 호스트가 localhost 이며 비밀번호가 test1234인 사용자를 생성하기 위해서는 아래의 쿼리를 실행한다
+>```sql
+>CREATE USER `study`@`localhost` IDENTIFIED BY 'test1234';
+>```
 * 이름과 호스트가 겹치는 계정이 여러개 존재할 수 는 없다(단순 이름만 겹치는 계정은 여러개 생길 수 있다)
 ## 조회하기
 * 존재하는 사용자를 조회하기 위해 아래 쿼리를 실행한다
-    ```mariaDB
-    SELECT `user`.`host` FROM `mysql`.`user`;
-    ```
+>```sql
+>SELECT `user`.`host` FROM `mysql`.`user`;
+>```
 ## 수정하기
 * 존재하는 사용자를 수정하기 위해 아래 쿼리를 실행한다
-    ```
-    ALTER USER `이름`@`호스트` IDENTIFIED BY '새 비밀번호';
-    ```
+>```sql
+>ALTER USER `이름`@`호스트` IDENTIFIED BY '새 비밀번호';
+>```
 ## 삭제하기
 * 존재하는 사용자를 삭제하기 위해 아래 쿼리를 실행한다
 * 해당 작업은 취소될 수 없음에 유의한다
-    ```
-    DROP USER `이름`@`호스트`;
-    ```
+> ```sql
+> DROP USER `이름`@`호스트`;
+> ```
