--- a/4. DBMS/03.권한.md
+++ b/4. DBMS/03.권한.md
@@ -3,33 +3,34 @@
 * 사용자 생성 후 아무런 권힌을 부여하지 않을 경우 단순 접속( USAGE ) 권한 밖에 없다
 ## 부여하기
 * 존재하는 사용자에게 권한을 부여하기 위해 아래와 같이 명령할 수 있다
-    ```
+    ```sql
     GRANT [ALL | 부여할 권한,...] ON [ * | 스키마 ].[ * | 테이블] TO `사용자 이름`@`호스트` [WITH GRANT OPTION]?;
     ```
     * 부여할 권한 대신 ALL 키워드를 사용할 경우 모든 권한을 부여하게 된다. 단, GRANT 명령을 실행할 권한은 포함되지 않는다
     * 권한을 부여할 대상이 되는 스키마 및 테이블의 이름 대신 애스터리스크( * )를 작성할 경우 모든 스키마 및 모든 테이블을  의미한다
     * WITH GRANT OPTION 을 추가하면 해당 사용자가 다른 사용자(혹은 본인)에게 권한을 부여할 수 있는 권한 까지 주게 되므로 유의한다
     * 예시로 study@localhost 사용자에게 모든 스키마 및 모든 테이블에 대해 모든 권한(GRANT 제외)을 할부여하기 위해 아래와 같이 명령할 수 있다
-    ```
+    ```sql
     GRANT ALL ON *.* TO `study`@`localhost`;
     ``` 
 ## 조회하기
 * 현재 접속중인 사용자의 권한을 조회하기 위해 아래 쿼리를 실행한다
-    ```
+    ```sql
     SHOW GRANTS;
     ```
 * 다른 사용자의 권한을 조회하기 위해 아래 쿼리를 실행한다
-    ```
+    ```sql
     SHOW GRANTS FOR `이름`@`호스트`;
     ```
 
 ## 철회하기
 * 존재하는 사용자가 가지고 있는 권한을 철회(뺏어옴)하기 위해 아래 쿼리를 실행한다
-    ```
-    REVOKE [ALL | 철회할 권한,...][,GRANT OPTION]? ON [* | 스키마].[* | 테이블] FROM `사용자 이름`@`호스트`;
-    ``` 
-    * 만약 해당 사용자에게 ***GRANT 권한이 있고 해당 권한을 철회하고 싶다면 `ON 키워드 전에 GRANT OPTION 을 명시`해야***한다
-    * 아래의 명령은 study @ localhost 계정으로 부터 GRANT 를 포함한 모든 권한을 철회할때 사용한다
-    ```
-    REVOKE ALL, GRANT OPTION ON *.* FROM `study`@`localhost`;
-    ```
+>```sql
+>REVOKE [ALL | 철회할 권한,...][,GRANT OPTION]? ON [* | 스키마].[* | 테이블] FROM `사용자 이름`@`호스트`;
+>``` 
+>    * 만약 해당 사용자에게 ***GRANT 권한이 있고 해당 권한을 철회하고 싶다면 `ON 키워드 전에 GRANT OPTION 을 명시`해야***한다
+>    * 아래의 명령은 study @ localhost 계정으로 부터 GRANT 를 포함한 모든 권한을 철회할때 사용한다
+>```sql
+>REVOKE ALL, GRANT OPTION ON *.* FROM `study`@`localhost`;
+>```
+
