--- a/2. CSS/20. letter-spacing, line-height, white-space, ,text 속성.md
+++ b/2. CSS/20. letter-spacing, line-height, white-space, ,text 속성.md
@@ -61,9 +61,9 @@
 * white-space 속성은 **텍스트의 공백문자 처리 및 줄 바꿈 관련 설정**을 위한 속성이다
 * 값
     * nomal : *[기본값]* 연속된 공백 문자를 하나로 합치고 개행자도 공백으로 간주한다. 줄이 너무 길어 요소를 벗얼날 경우 다음 줄을 바꾼다
-    * norap : 연속된 공백 문자를 하나로 합치지만 자동으로 개행(줄)을 만들지 않는다
+    * nowrap : 연속된 공백 문자를 하나로 합치지만 자동으로 개행(줄)을 만들지 않는다
     * pre : 연속된 공백을 합치지 않고 개행자도 인정한다
-* 보통 nomal과 norap을 사용한다.    
+* 보통 nomal과 nowrap을 사용한다.    
 # word-spacing
 * word-spacing 속성은 ***단어간, 태그간 거리를 지정***하기 위한 속성이다
 * 값
