--- a/4. DBMS/01.개념.md
+++ b/4. DBMS/01.개념.md
@@ -12,3 +12,11 @@
 * 주석(Comment)은 쿼리 실행에 영향을 미치지 않고 간단한 메모를 남기기 위해 사용한다
 * 한 줄 주석 : 한 줄 주석은 샾( # ) 및 대쉬 두 개( -- )를 사용해서 작성할 수 있다. 단 -- 뒤에는 공백이 있어야 함에 유의한다
 * 여러 줄 주석 /* 으로 시작해서 */ 으로 끝낸다
+## Axel과의 관계
+* 액셀과 데이터베이스의 실질적인 관계라기보다는 생김새가 비슷한 형태이다
+>* 엑셀 파일 = 스키마
+>* 시트 = 테이블
+>* 행(데이터) = 레코드
+* 레코드는 테이블에 종속되어 있다. 즉 부모가 사라지면 자식 and 자손까지 모두 사라진다
+* 파일(스키마)가 존재해야 다른 시트(테이블) 가 존재 할 수 있으며 테이블이 있어야 데이터(레코드)가 존재할 수 있다
+* 차이점이라면 쿼리작성인지 눈으로 보고 작성하는지 차이이다
