--- a/4. DBMS/05-0.테이블 및 열.md
+++ b/4. DBMS/05-0.테이블 및 열.md
@@ -14,11 +14,63 @@
 >* 소속될 스키마는 반드시 존재하는 상태여야 한다.
 >* 동일한 스키마 내에서 이미 사용 중인 테이블 이름을 사용할 수 없다.
 ## 조회하기
-* 
+* 특정 스키마에 소속되어있는 테이블의 목록을 조회하기 위해 아래 쿼리를 실행한다
+```SQL
+SHOW  TABLES IN `스키마`;
+```
+* 특정 테이블이 가지고 있는 열의 구조를 조회하기 위해 아래 쿼리를 실행한다
+```SQL
+DESC `스키마`.`테이블`;
+
+DESCRIBE `스키마`.`테이블`;
+```
 ## 수정하기
-* 
+### 이름 및 소속 스키마 변경하기
+* 테이블의 이름을 변경하거나 소속된 스키마를 변경하고자 할 때 아래의 쿼리를 실행한다
+* 스키마의 이름을 변경하는 것은 불가능함으로 새로운 이름을 가지는 스키마를 생성하고, 이전 스키마에 있던 모든 테이블을 신규 스키마에 옮긴뒤 기존 스키마를 삭제하는 형식으로 진행한다
+>```SQL
+>ALTER TABLE : `기존 스키마`.`기존 테이블` RENAME `새로운 스키마`.`새로운 테이블`;
+>```
+>* 소속 스키마 변경 없이 테이블 이름만 변경하고자 한다면, **기존 스키마**와 **새로운 스키마**를 동힐하게 유지하면 된다 
+>* 테이블 이름 변경 없이 소속 스키마만 변경하고자 한다면, **기존 테이블 이름**과 **새로운 테이블 이름**을 동일하게 유지하면 된다.
+### 열 추가하기
+* 테이블에 열을 추가하기 위해 아래 쿼리를 실행한다
+>```sql
+>ALTER TABLE `스키마`.`테이블` ADD COLUMN [열 구조];
+>```
+>* 별도의 명시가 없다면 열은 테이블의 가장 마지막에 추가된다
+>* 추가하려는 열을 특정 열의 뒤에 추가하려면 아래와 같이 AFTER 키워드를 활용한다
+>```SQL
+>ALTER TABLE `스키마`.`테이블` ADD COLUMN [열 구조] AFTER `기준 열`;
+>```
+>* 어떠한 열을 기준으로 앞 자리에 열을 추가하는 키워드는 존재하지 않는다
+>* 열을 테이블의 가장 앞자리에 추가하고자 할때에는 FIRST 키워드를 활용해야한다
+>```SQL
+>ALTER TABLE `스키마`.`테이블` ADD COLUMN [열 구조] FIRST;
+>```
+### 열 이름 변경하기
+* 열의 이름을 변경하기 위해 아래 쿼리를 실행한다
+```sql
+ALTER TABLE `스키마`.`테이블` RENAME COLUMN `기존 열 이름` TO `새로운 이름`;
+```
+### 열 구조 수정하기
+* 열의 구조를 수정하기 위해 아래 쿼리를 실행한다
+>```SQL
+>ALTER TABLE `스키마`.`테이블` MODIFY COLUMN `대상 열 이름` [이름을 제외한 열 구조];
+>```
+>* 열 구조 수정과 동시에 AFTER 및 FIRST 키워드를 사용하여 위치 또한 변경할 수 있다
+### 열 삭제하기
+* 열을 삭제하기 위해 아래 쿼리를 실행한다
+* 열을 삭제하면 이에 해당하는 **레코드들의 데이터가 삭제되고 되돌릴 수 없음**으로 유의한다
+```SQL
+ALTER TABLE `스키마`.`테이블` DROP COLUMN `열 이름`;
+```
 ## 삭제하기
-* 
+* 테이블을 삭제하기 위해 아래 쿼리를 실행한다
+* 테이블을 삭제하면 해당 테이블이 가지고 있는 ***레코드가 모두 삭제되고 되돌릴 수 없음***으로 유의한다
+```SQL
+DROP TABLE `스키마`.`테이블`;
+```
 # 열
 * 열(Column)은 테이블에 존재하는 레코드가 가지는 데이터의 타입을 정하기 위해 사용한다
 * 명명법 : 스네이크 케이스(~_~), 단/복수형
