--- a/4. DBMS/07.연산자.md
+++ b/4. DBMS/07.연산자.md
@@ -26,3 +26,10 @@
     * 어떤 값이 NULL 인지 검사하기 위해 비교 연산( = , != 혹은 <> ) 하지 않음에 유의한다
 * IS NOT NULL : a IS NOT NULL 꼴에서 a 가 NULL 이 아닌가의 여부이다
     * 어떤 값이 NULL 이 아닌지 검사하기 위해 비교 연산( = , != 혹은 <> ) 하지 않음에 유의한다
+* LIKE : a LIKE b 꼴에서 a 가 b 패턴에 부합하는가의 여부이다
+    * 패턴은 문자열로 작성한다
+    * 패턴에서 % 는 0개 이상의 아무 문자이다
+    * 패턴에서 _ 는 1개의 아무 문자이다
+* NOT LIKE : a NOT LIKE b 꼴에서 a 가 b 패턴에 부합하지 않는 가의 여부이다
+* REGEXP : `a REGEXP b`꼴에서 `a`가 정규표현식 `b`를 만족하는가의 여부이다.
+* NOT REGEXP: `a NOT REGEXP b`꼴에서 `a`가 정규표현식 `b`를 만족하지 못하는가의 여부이다.
