--- a/4. DBMS/08.함수.md
+++ b/4. DBMS/08.함수.md
@@ -17,6 +17,44 @@
 * LENGTH(x) : 문자열 x 의 **바이트 크기**를 반환한다
 * CHAR_LENGTH(x) : 문자열 x 의 **문자 개수**를 반환한다.
 * CONCAT(x, ...) : 한 개 이상의 인자 x 를 이어 붙인 문자열을 반환한다. 문자열 이어 붙이기를 위한 더하기 연산 ( + )을 지원하지 않음에 유의한다
+* CONCAT_WS(d, x,...) : 한 개 이상의 인자 x 를 d 로 이어 붙인 문자열을 반환한다
+```sql
+-- 예시
+SELECT CONCAT_WS('-', '2024','01','10'); -- 해당 문자열 - 를 각 문자열 2024,01,10 사이에 넣는 용도로 쓰인다 출력값 2024-01-10
+```
+* LCASE(x) 혹은 LOWER(x) : 문자열 x 가 가지는 모든 라틴 문자를 소문자화하여 반환한다 
+* RCASE(x) 혹은 UPPER(x) : 문자열 x 가 가지는 모든 라틴 문자를 대문자화하여 반환한다
+* MID(x, y, z) 혹은 SUBSTR(x, y, z) 혹은 SUBSTRING(x, y, z) : 문자열 x 가 가지는 문자중 y 번째 문자를 포함, 후행하는 z 개의 문자를 반환한다
+    * 첫 번째 인자인 문자열에서 문자의 순번은 1 부터 시작 함에 유의한다
+    * 선택할 문자의 갯수를 의미하는 세번째 인자(z)를 생략할 경우 끝까지 선택한다
+    ```SQL
+    -- 예시
+    SELECT MID('ABCDEF', 3, 2); -- 문자열 ABCDEF 의 3번째 문자부터 2글자를 나타내게 한다 출력하면 CD가 나타난다
+    ```
+    * LEFT(x, y) : 문자열 x 의 선행문자 y 개를 반환한다
+    ```SQL
+    -- 예시
+    SELECT LEFT('ABCDEF', 3); -- 문자열 ABCDEF 의 앞에서 3글자를 나타낸다 출력값 ABC
+    ```
+    * RIGHT(x, y) : 문자열 x 의 후행문자 y 개를 반환한다
+    ```SQL
+    -- 예시
+    SELECT RIGHT('ABCDEF', 3); -- 문자열 ABCDEF의 뒤에서 3글자를 나타낸다 출력값 DEF
+    ```
+* REPEAT(x, y) : 인자 x 를 y 번 반복한 문자열을 반환한다
+* REPLACE(x, f, t) : 문자열 x 에서 f 를 찾아 t 로 바꾸어 반홚나다
+```sql
+-- 예시
+SELECT REPLACE('Hello World', 'Hello', 'Hi') -- 문자열 Hello World 를 찾아 Hello 부분을 Hi 로 변경한다 출력값 Hi World
+```
+* REVERSE(x) : 문자열 x 를 뒤집어 반환한다.
+* TRIM(x) : 문자열 x 의 선/후행 공백을 모두 제거하여 반환한다
+```sql
+-- 예시
+SELECT TRIM('   M        Y   '); -- 해당 문자열의 양 끝 공백을 제거한다 출력값 M       Y
+```
+    * LIMIT(x) : 문자열 x 의 선행 공백을 모두 제거해 반환한다
+    * RTRIM(x) : 문자열 x 의 후행 공백을 모두 제거해 반환한다
 * REPEAT(x, y) : 인자 x 를 y 번 반복한 문자열을 반환한다.
 
 ### 사용한 예시
@@ -28,3 +66,27 @@ SELECT `index`, `user`, `written_at`, CONCAT(REPEAT('★', `rating`),REPEAT('☆
 FROM `study`.`reviews` -- SELECT 를 하게 될때 해당 열을 적기 전에 미리 해당 스키마의 테이블을 지정해주고 조회할 코드를 적을 땐 수월해 진다.
 ORDER BY `index` DESC ; -- ORDER BY 를 통해 정렬을 하는 것으로 기준을 삼을 열 이름(`index`)을 적어줌 DESC를 통해 내림 차순으로 했음
 ```
+
+## 날짜와 시간 함수
+* CURDATE() 혹은 CURRENT_DATE() : 현재 날짜를 반환한다
+* CURTIME() 혹은 CURRENT_TIME() : 현재 시간을 반환한다
+* CURRENT_TIMESTAMP(x) 혹은 NOW(x) 혹은 SYSDATE(x) : 현재 날짜와 시간을 반환한다. x 는 밀리 초 자리수이며 생략시 0을 기본값으로 사용한다 최대 값은 6이다 보통은 ***NOW()를 사용하는 편***이다.
+* YEAR(x) : 일시 혹은 날짜인 x의 년(年)을 반환한다
+* MONTH(x) : 일시 혹은 날짜인 x의 월(月)을 반환한다
+* DAY(x) : 일시 혹은 날짜인 x의 일(日)을 반환한다
+* HOUR(x) : 일시 혹은 시간인 x 의 시를 반환한다
+* MINUTE(x) : 일시 혹은 시간인 x 의 분를 반환한다
+* SECOND(x) : 일시 혹은 시간인 x 의 초를 반환한다
+* MICROSECOND(x) : 일시 혹은 시간인 x 의 밀리 초를 반환한다
+* DATE(x) : 일시 x 의 날짜를 반환한다
+* TIME(x) : 일시 x 의 시간을 반환한다
+* DATE_ADD(x, INTERVAL y z) : 일시 x 에 z 주기인 y 만큼을 더한다. 주기는 YEAR, QUARTER, MONTH, WEEK, DAY, HOUR, MINUTE, SECOND 등을 사용할 수 있다
+>* 예시
+>```SQL
+>SELECT DATE_ADD(NOW(), INTERVAL 1 YEAR);
+>```
+>* 일시 NOW() 즉 오늘에 주기인 YEAR 의 1 만큼 더한 날짜를 표기해 준다
+* DATE_SUB(x, INTERVAL y z) : 일시 x 에 z 주기인 y 만큼을 뺀다. 이를 사용해도 좋지만 DATE_ADD 에서 y 위치의 - 를 붙여도 가능하다
+
+## 통계 함수
+* 
