--- a/3. JS/06. 함수.md
+++ b/3. JS/06. 함수.md
@@ -12,14 +12,15 @@
 ```js
     parseInt('314');
 ```
-* 예시로 console 의 멤버인 log 함수에 전달 인자 'hello World' 를 전달하여 호출하는 표현은 아래와 같다
-```js
-    console.log('Hello World'); // Hello World는 전달 인자이며 console.log 는 일반 함수이며 console.log() 가 함수 호출이다
-```
+>* 예시로 console 의 멤버인 log 함수에 전달 인자 'hello World' 를 전달하여 호출하는 표현은 아래와 같다
+>```js
+>    console.log('Hello World'); // Hello World는 전달 인자이며 console.log 는 일반 함수이며 console.log() 가 함수 호출이다
+>```
 
 ## 일반 함수
 * 일반 함수
 ```js
+
 function [함수 이름] ([매개 변수,....]) {
     [구현부]
 }
@@ -50,10 +51,10 @@ let sum = function(a,b) {
 * 함수 자체는 익명이다
 
 ## 화살표 함수
-* 화살표 함수
+* 화살표 함수는 함수 표현식에 대한 간결한 대안으로, 약간의 의미적 차이와 의도적인 사용상의 제한을 가지고 있다
 ```js
 let [변수 이름] = ([매개 변수,...]?) => {
-    구현부
+    [구현부]
 }
 ```
 * 전달 받은 매개변수 a 와 b 의 합을 반환하는 화살표 함수를 변수 sum 에 할당하기 위해 아래와 같이 작성할 수 있다
@@ -96,15 +97,15 @@ sum(1000);       // 1000
 * parseInt(x) : 주어진 ***문자열 x를 `정수인 number 로 변환`하여 반환***한다
 * setInterval(f, t) : t 밀리초를 주기로 f 를 실행하기 위해 사용한다. 인터벌 객체의 식별자인 숫자를 반환한다
     * clearInterval(i) : 인터벌 객체의 등록을 해제(Release)하기 위해 사용한다. 인자 i 로는 setInterval 함수 호출에 의해 발생한 **`인터벌 객체의 식별자`인 `숫자값`을 전달**한다
-    ```js
-    setInterval(function() {
-        console.log('hello');
-        },1500);
-    1
-    hello // 출력 값으로 1.5초마다 hello 가 찍힌다
-    clearInterval(1) // setInterval을 시작할때 나타나는 숫자를 대입 시켜서 해당 인터벌을 종료시킬 수 있다
-    undefined 
-    ```
-    
+>```js
+>setInterval(function() {
+    >console.log('hello');
+    >},1500);
+>1
+>hello // 출력 값으로 1.5초마다 hello 가 찍힌다
+>clearInterval(1) // setInterval을 시작할때 나타나는 숫자를 대입 시켜서 해당 인터벌을 종료시킬 수 있다
+>undefined 
+>```
+>
 * setTimeout(f, t) : t 밀리초 후에 함수 f 를 1 회 실행하기 위해 사용한다. 타임아웃 객체의 식별자인 숫자를 반환한다
     * clearTimeout(i) : 타임아웃 객체의 등록을 해제(Release)하기 위해 사용한다. 인자 i 로는 setTimeout 함수 호출에 의해 발생한 **`타임아웃 객체의 식별자`인 `숫자값`을 전달**한다
