--- a/4. DBMS/05-0.테이블 및 열.md
+++ b/4. DBMS/05-0.테이블 및 열.md
@@ -143,4 +143,4 @@ DROP TABLE `스키마`.`테이블`;
 >* NULL : 해당 열의 값이 비어있을 수 있다는 의미이다. 생략시 기본값
 >* NOT NULL : 해당 열의 값이 비어있을 수 없다는 의미이다
 >* DEFAULT x : 레코드 삽입시 해당 열의 값을 **`명시하지 않을 경우 사용할 기본 값을 x`** 로 한다. ***생략시엔 기본값은 NULL***이다
->* AUTO_INCREMENT : 
+>* AUTO_INCREMENT : 정의된 필드에 대한 테이블에 레코드가 삽입될 때마다 자동으로 순차적 숫자 값을 생성한다 (주로 기본키를 생성시 사용한다)
