--- a/4. DBMS/06.레코드.md
+++ b/4. DBMS/06.레코드.md
@@ -24,21 +24,34 @@
 * 테이블이 가지고 있는 레코드를 조회하기 위해 아래 쿼리를 실행한다
 >```SQL
 >SELECT [*|열,...|리터럴,...]
->FROM `스키마`.`테이블`
+>FROM `스키마`.`테이블`'(조회할 대상을 가지는 테이블)'
+>[JOIN ...]?
 >[WHERE [조건]]?
+>[GROUP BY [기준 열,...]]?
 >[ORDER BY [기준 열,...] [ASC|DESC]?]?
 >[LIMIT [개수] [OFFSET [개수]]?]?;
 >```
 >* `*` : 테이블이 가지고 있는 모든 열을 의미한다
 >* WHERE : 조건에 맞는 레코드만 선택한다
+>* GROUP BY : 통계 함수를 사용할 때 레코드를 묶어 낼 기준 열을 명시한다. 명시하지 않으면 모든 레코드를 통계 기준으로 한다
 >* ORDER BY : 선택 결과를 정렬할 기준 열을 지정한다
 >>* ASC : [*기본값*]오름차순 정렬
 >>* DESC : 내림차순 정렬
 >* LIMIT OFFSET
 >>* LIMIT : 본래 SELECT 에 의해 선택될 결과에서 **명시한 개수의 상위 레코드**만 선택한다
 >>* OFFSET : 본래 SELECT 에 의해 선택될 결과에서 **명시한 갯수의 레코드**를 생략한다 (단독으로 사용 불가능하다)
+### 조인 (JOIN)
+* 조인(Join) 기능은 현재 조회하고 있는 테이블이 가진 데이터를 활용하여 다른 테이블에 있는 데이터를 함께 조회할 때 사용한다
+* 조인의 아래 구조는 다음과 같다
+>```SQL
+> [LEFT | RIGHT | INNER] JOIN `스키마`.`테이블` AS `별명` ON [조건]
+>```
+>* 조인 대상이 되는 테이블이 가지는 레코드 중 조건이 부합하는 레코드를 모두 가지고 온다
+>* LEFT : FROM 대상이 되는 테이블이 가지는 데이터를 기준으로 선택한다
+>* RIGHT : JOIN 대상이 되는 테이블이 가지는 데이터를 기준으로 선택한다
+>* INNER : FROM 과 JOIN 대상이 되는 테이블이 가지는 데이터의 교집합을 기준으로 선택한다
 ## 수정하기
-* 레코드가 가지는 값ㄹ을 수정하기 위해 아래 쿼리를 실행한다
+* 레코드가 가지는 값을 수정하기 위해 아래 쿼리를 실행한다
 >```SQL
 >UPDATE `스키마`.`테이블`
 >SET [[`열 이름` = [값]],...];
