--- a/4. DBMS/08.함수.md
+++ b/4. DBMS/08.함수.md
@@ -12,15 +12,26 @@
 * RAND() : 0 이상 1 미만 무작위 실수를 반환한다
 ## 논리 함수
 * IF(c, t, f) : 조건 c 가 참일 경우 t를, 거짓일 때 f를 반환한다
+>```SQL
+>-- 예시
+>SELECT IF(`student`.`gender` = 'M' , '남', '여')
+>```
+>* student 테이블에 있는 gender 열의 레코드가 문자열 M 이 맞다면 문자열 남 아니라면 문자열 여 를 나타내게 했다
 * IFNULL(x, a) : x 가 NULL 이라면 a 아니라면 x 를 그대로 반환한다
 ## 문자 함수
 * LENGTH(x) : 문자열 x 의 **바이트 크기**를 반환한다
 * CHAR_LENGTH(x) : 문자열 x 의 **문자 개수**를 반환한다.
 * CONCAT(x, ...) : 한 개 이상의 인자 x 를 이어 붙인 문자열을 반환한다. 문자열 이어 붙이기를 위한 더하기 연산 ( + )을 지원하지 않음에 유의한다
+```sql
+-- 예시
+SELECT CONCAT('2023','-','12','-','31'); -- 문자열을 출력하는 것이지 인자가 들어가는 곳에는 문자열 형태가 아닌 다른 함수를 넣어서 사용할 수 도 있다. 
+-- 출력 값 2023-12-31
+```
 * CONCAT_WS(d, x,...) : 한 개 이상의 인자 x 를 d 로 이어 붙인 문자열을 반환한다
 ```sql
 -- 예시
-SELECT CONCAT_WS('-', '2024','01','10'); -- 해당 문자열 - 를 각 문자열 2024,01,10 사이에 넣는 용도로 쓰인다 출력값 2024-01-10
+SELECT CONCAT_WS('-', '2024','01','10'); -- 해당 문자열 - 를 각 문자열 2024,01,10 사이에 넣는 용도로 쓰인다
+-- 출력값 2024-01-10
 ```
 * LCASE(x) 혹은 LOWER(x) : 문자열 x 가 가지는 모든 라틴 문자를 소문자화하여 반환한다 
 * RCASE(x) 혹은 UPPER(x) : 문자열 x 가 가지는 모든 라틴 문자를 대문자화하여 반환한다
@@ -42,7 +53,7 @@ SELECT CONCAT_WS('-', '2024','01','10'); -- 해당 문자열 - 를 각 문자열
     SELECT RIGHT('ABCDEF', 3); -- 문자열 ABCDEF의 뒤에서 3글자를 나타낸다 출력값 DEF
     ```
 * REPEAT(x, y) : 인자 x 를 y 번 반복한 문자열을 반환한다
-* REPLACE(x, f, t) : 문자열 x 에서 f 를 찾아 t 로 바꾸어 반홚나다
+* REPLACE(x, f, t) : 문자열 x 에서 f 를 찾아 t 로 바꾸어 반환한다
 ```sql
 -- 예시
 SELECT REPLACE('Hello World', 'Hello', 'Hi') -- 문자열 Hello World 를 찾아 Hello 부분을 Hi 로 변경한다 출력값 Hi World
@@ -80,7 +91,7 @@ ORDER BY `index` DESC ; -- ORDER BY 를 통해 정렬을 하는 것으로 기준
 * MICROSECOND(x) : 일시 혹은 시간인 x 의 밀리 초를 반환한다
 * DATE(x) : 일시 x 의 날짜를 반환한다
 * TIME(x) : 일시 x 의 시간을 반환한다
-* DATE_ADD(x, INTERVAL y z) : 일시 x 에 z 주기인 y 만큼을 더한다. 주기는 YEAR, QUARTER, MONTH, WEEK, DAY, HOUR, MINUTE, SECOND 등을 사용할 수 있다
+* DATE_ADD(`x`, INTERVAL *y* **z**) : 일시 x 에 z 주기인 y 만큼을 더한다. 주기는 YEAR, QUARTER, MONTH, WEEK, DAY, HOUR, MINUTE, SECOND 등을 사용할 수 있다
 >* 예시
 >```SQL
 >SELECT DATE_ADD(NOW(), INTERVAL 1 YEAR);
@@ -89,4 +100,8 @@ ORDER BY `index` DESC ; -- ORDER BY 를 통해 정렬을 하는 것으로 기준
 * DATE_SUB(x, INTERVAL y z) : 일시 x 에 z 주기인 y 만큼을 뺀다. 이를 사용해도 좋지만 DATE_ADD 에서 y 위치의 - 를 붙여도 가능하다
 
 ## 통계 함수
-* 
+* COUNT(x) : 선택되는 열 혹은 리터럴 x 의 개수를 반환한다
+* AVG(x) : 선택되는 열 x 의 평균을 반환한다 (사용 방식은 06.레코드의 조회하기를 확인해보자)
+* SUM(x) : 선택되는 열 x 의 합을 반환한다
+* MIN(x) : 선택되는 열 x 가 가지는 값 중 최소 값을 반환한다
+* MAX(x) : 선택되는 열 x 가 가지는 값 중 최대 값을 반환한다
