--- a/1. HTML/03. 태그의 종류 2.md
+++ b/1. HTML/03. 태그의 종류 2.md
@@ -74,18 +74,18 @@
 * label 태그는 `연결된 입력 태그에 대한 설명을 문자열`로 가지며, 스크린 리더가 연결된 태그에 대한 설명으로 **label 내부의 내용을 사용함으로 반드시 작성해야 한다**. 누락시 HTML5표준 위반이다.
 * 작성 방법은 두가지가 있다.
     * label 태그의 for 속성 값을 입력 태그가 가지는 id 속성 값과 일치시키는 방법
-        ```html
-            <label for="emailinput">이메일</label>
-            <input id="emailinput" name="email" placeholder="이메일을 입력해 주세요" type="email">
-        ```
-        * id 속성이 가지는 속성 값은 하나의 HTML 문서 내에서 중복되어서는 안 되므로 각별히 유의해야 한다.
-    * label 태그가 직접 입력 태그를 자식으로 가지게 하는 방법
-        ```html
-            <label>
-                <span>이메일</span>
-                <input name="email" placeholder="이메일을 입력해주세요" type="email">
-            <label>
-        ```
+>```html
+><label for="emailinput">이메일</label>
+><input id="emailinput" name="email" placeholder="이메일을 입력해 주세요" type="email">
+>```
+>* id 속성이 가지는 속성 값은 하나의 HTML 문서 내에서 중복되어서는 안 되므로 각별히 유의해야 한다.
+* label 태그가 직접 입력 태그를 자식으로 가지게 하는 방법
+```html
+<label>
+    <span>이메일</span>
+    <input name="email" placeholder="이메일을 입력해주세요" type="email">
+<label>
+```
 ## optgroup
 * optgroup (Option Group)태그는 서로 관련이 있는 `<option>` 태그를 묶어내기 위해 사용한다.
 * 자동으로 닫는 태그가 `아니며` 시멘틱이 `있다`
