--- a/3. JS/08.요소.md
+++ b/3. JS/08.요소.md
@@ -59,8 +59,11 @@
 >>>* mouseenter : 마우스 커서가 해당 요소에 진입 했을 때의 이벤트
 >>>* mouseleave : 마우스 커서가 해당 요소에서 빠져나갔을 때의 이벤트
 >>>* wheel : 마우스 휠이 돌아갔을 때의 이벤트
+>* getBoundingClientRect(): 호출 대상이 되는 요소의 위치나 크기를 픽셀 단위로 가지고 있는 객체를 반환한다.
+>* **querySelector(x)** : 호출 대상이 되는 ***요소의 자식 혹은 자손이면서 CSS 선택자인 문자열 x 를 가장 빨리 만족하는 요소 한 개***를 반환한다. 그러한 요소가 없다면 null 을 반환한다
+>* **querySelectorAll(x)**  : 호출 대상이 되는 요소의 자식 혹은 자손이면서 CSS 선택자인 ***문자열 x 를 만족하는 요소 전체를 인자로 가지는 유사 배열 객체***로 NodeList 를 반환한다. 그러한 요소가 없다면 길이가 0 인 유사 배열 객체 NodeList를 반환한다
 * 객체 이벤트
->* onclick : 클릭했을 때 실행될 이벤트 함수
+>* **onclick : 클릭했을 때 실행**될 이벤트 함수
 >```js
 >// 예시
 >image.onclick = function () {
@@ -76,3 +79,8 @@
 >* **onmouseenter : 마우스 커서가 해당 요송에 진입했을 때** 실행할 이벤트 함수
 >* **onmouseleave : 마우스 커서가 해당 요소에서 빠져 나갔을 때** 실행할 이벤트 함수
 >* **onwheel : 마우스 휠이 돌아갔을 때** 실행할 이벤트 함수
+
+
+* JSON.parse : 문자열을 오브젝트나 배열로 나타내게 한다
+* JSON.stringify : 오브젝트나 배열을 문자열로 나타내게 한다
+* DOMParser().parseFromString() : HTML 혹은 xml 의 구조를 JS 에서 변경하기 위해 사용하는 객체로서 첫번째 인자엔 문자열 형식인 HTML,xml 구조들이 들어가게 되고 두번째 인자를 통해 'text/html' 이 반 고정으로 들어가 text 형식을 html 구조로 변경되는 것을 알려준다 
