--- a/3. JS/3-1. XHR/01. XHR.md
+++ b/3. JS/3-1. XHR/01. XHR.md
@@ -19,9 +19,9 @@ xhr.send([요청 데이터]?);
 ```
 
 ## 정적 속성
-* INSENT : XHR 객체의 readyState 속성 값으로 0 과 같고 **XHR 객체가 객체화된 후 아무런 동작을 하지 않은 초기상태**이다
+* UNSENT : XHR 객체의 readyState 속성 값으로 0 과 같고 **XHR 객체가 객체화된 후 아무런 동작을 하지 않은 초기상태**이다
 * OPENED : XHR 객체의 readyState 속성 값으로 1 과 같고 **open 메서드 호출 후의 상태**이다
-* MEHEADERS_RECEIVED : XHR 객체의 readyState 속성 값으로 2 과 같고 ***send 메서드 호출 후 서버와의 연결을 수립한 상태***이다
+* HEADERS_RECEIVED : XHR 객체의 readyState 속성 값으로 2 과 같고 ***send 메서드 호출 후 서버와의 연결을 수립한 상태***이다
 * LOADING : XHR 객체의 readyState 속성 값으로 3 과 같고 **서버의 응답이 수신되기 시작한 상태**이다
 * DONE : XHR 객체의 readyState 속성 값으로 4 와 같고 ***XHR 통신이 성공 여부와 관계없이 종료되었음***을 의미한다. (통신 성공 여부는 status 속성 값이 200 이상 300미만인지 여부로 판단해야한다.)
 ## 객체 속성
