--- a/5. JAVA/09. Math 클래스.md
+++ b/5. JAVA/09. Math 클래스.md
@@ -1,25 +1,26 @@
 # Math 클래스
 * Math(java lang.Math) 클래스는 수학과 관련된 편의 기능을 제공한다
+#### 정적 멤버 변수 및 정적 메서드는 Math. 이후에 붙는 일종의 속성들이다 
 ## 정적 멤버 변수
 * E : 자연상수(e)
 * PI : 원주율(n)
 ## 정적 메서드
-- abs(int|long|float|double x) : `x`의 절댓값(±)을 반환한다.
-- addExact(int|long a, int|long b) : `a`와 `b`의 합을 반환한다. 단, 오버플로우 혹은 언더플로우가 발생할 경우 예외(`java.lang.ArithmeticException`)를 발생시킨다.
-- cbrt(double x) : `x`의 세제곱근(Cubic Root, <code>∛x</code>)을 반환한다.
-- ceil(double x) : `x`의 소수부를 올림하여 반환한다.
-- decrementExact(int|long x) : `x`에서 `1`을 뺀 값을 반환한다. 단, 오버플로우 혹은 언더플로우가 발생할 경우 예외(`java.lang.ArithmeticException`)를 발생시킨다.
-- floor(double x): `x`의 소수부를 내림하여 반환한다.
-- incrementExact(int|long x) : `x`에 `1`을 더한 값을 반환한다. 단, 오버플로우 혹은 언더플로우가 발생할 경우 예외(`java.lang.ArithmeticException`)를 발생시킨다.
-- log(double x): `x`의 자연로그를 반환한다.
-- log10(double x): `x`의 상용로그를 반환한다.
-- max(int|long|float|double a, int|long|float|double b) : `a`와 `b`중 더 큰 값을 반환한다.
-- min(int|long|float|double a, int|long|float|double b) : `a`와 `b`중 더 작은 값을 반환한다.
-- multiplyExact(int|long a, int|long b) : `a`와 `b`의 곱을 반환한다. 단, 오버플로우 혹은 언더플로우가 발생할 경우 예외(`java.lang.ArithmeticException`)를 발생시킨다.
-- negateExact(int|long x) : `x`의 부호를 반전하여 반환한다. 단, 오버플로우 혹은 언더플로우가 발생할 경우 예외(`java.lang.ArithmeticException`)를 발생시킨다.
-- pow(double a, double b): `a`의 `b`제곱(<code>a<sup>b</sup></code>)을 반환한다.
+- ***abs(int|long|float|double x)*** : `x`의 절댓값(±)을 반환한다.
+- ***addExact(int|long a, int|long b)*** : `a`와 `b`의 합을 반환한다. 단, 오버플로우 혹은 언더플로우가 발생할 경우 예외(`java.lang.ArithmeticException`)를 발생시킨다.
+- ***cbrt(double x)*** : `x`의 세제곱근(Cubic Root, <code>∛x</code>)을 반환한다.
+- ***ceil(double x***) : `x`의 소수부를 올림하여 반환한다.
+- ***decrementExact(int|long x)*** : `x`에서 `1`을 뺀 값을 반환한다. 단, 오버플로우 혹은 언더플로우가 발생할 경우 예외(`java.lang.ArithmeticException`)를 발생시킨다.
+- ***floor(double x)***: `x`의 소수부를 내림하여 반환한다.
+- ***incrementExact(int|long x)*** : `x`에 `1`을 더한 값을 반환한다. 단, 오버플로우 혹은 언더플로우가 발생할 경우 예외(`java.lang.ArithmeticException`)를 발생시킨다.
+- ***log(double x)***: `x`의 자연로그를 반환한다.
+- ***log10(double x)***: `x`의 상용로그를 반환한다.
+- ***max(int|long|float|double a, int|long|float|double b)*** : `a`와 `b`중 더 큰 값을 반환한다.
+- ***min(int|long|float|double a, int|long|float|double b)*** : `a`와 `b`중 더 작은 값을 반환한다.
+- ***multiplyExact(int|long a, int|long b)*** : `a`와 `b`의 곱을 반환한다. 단, 오버플로우 혹은 언더플로우가 발생할 경우 예외(`java.lang.ArithmeticException`)를 발생시킨다.
+- ***negateExact(int|long x)*** : `x`의 부호를 반전하여 반환한다. 단, 오버플로우 혹은 언더플로우가 발생할 경우 예외(`java.lang.ArithmeticException`)를 발생시킨다.
+- ***pow(double a, double b)***: `a`의 `b`제곱(<code>a<sup>b</sup></code>)을 반환한다.
 - random() : `0`이상 `1`미만의 무작위 실수를 반환한다.
-- round(double x) : `x`의 소수부를 반올림하여 반환한다.
-- sqrt(double x) : `x`의 제곱근(Square Root, <code>√x</code>)을 반환한다.
-- subtractExact(int|long a, int|long b): `a`와 `b`의 차를 반환한다. 단, 오버플로우 혹은 언더플로우가 발생할 경우 예외(`java.lang.ArithmeticException`)를 발생시킨다.
-- toIntExact(long x) : 큰 정수(`long`)인 `x`를 일반 정수(`int`)로 변환하여 반환한다. 단, 오버플로우 혹은 언더플로우가 발생할 경우 예외(`java.lang.ArithmeticException`)를 발생시킨다.
+- ***round(double x)*** : `x`의 소수부를 반올림하여 반환한다.
+- ***sqrt(double x)*** : `x`의 제곱근(Square Root, <code>√x</code>)을 반환한다.
+- ***subtractExact(int|long a, int|long b)***: `a`와 `b`의 차를 반환한다. 단, 오버플로우 혹은 언더플로우가 발생할 경우 예외(`java.lang.ArithmeticException`)를 발생시킨다.
+- ***toIntExact(long x)*** : 큰 정수(`long`)인 `x`를 일반 정수(`int`)로 변환하여 반환한다. 단, 오버플로우 혹은 언더플로우가 발생할 경우 예외(`java.lang.ArithmeticException`)를 발생시킨다.
