--- a/5. JAVA/10. String 클래스.md
+++ b/5. JAVA/10. String 클래스.md
@@ -2,7 +2,7 @@
 * String(java.lang.String) 클래스는 문자열과 관련된 기능을 제공한다
 ## 정적 메서드
 * **copyValueOf(char[] x)** : 문자 배열 x 가 가진 문자(char) 인자들을 이어 붙인 문자열을 반환한다
-* **format(String s, Object... as)** : 주어진 규격 s  에 맞도록 하나 이상의 as 를 순차적으로 대입한 문자열을 반환한다 규격 s 에는 아래와 같은 표현식을 사용할 수 있다
+* **format(String s, Object... as)** : 주어진 규격 s  에 맞도록 ***하나 이상의 as 를 순차적으로 대입한 문자열을 반환***한다 규격 s 에는 아래와 같은 표현식을 사용할 수 있다
     * **%c** : 문자(char)대입
     * **%d** : 정수형(byte,short,int,long)대입
         * %,d : 천자리 단위를 쉼표로 구분하여 대입시킨다
