--- a/5. JAVA/02. 타입, 형변환.md
+++ b/5. JAVA/02. 타입, 형변환.md
@@ -34,5 +34,6 @@
 * 묵시적 형 변환(업 캐스팅, Up Casting)은 별도의 명시 없이 서로 일치하지 않은 변수에 값을 할 당하는 과정 중에 발생한다
 * 주로 보다 큰 기초 타입의 변수에 작은 값을 할당하거나, 부모 타입의 변수에 자식 객체를 할당할 때 발생한다.
 ### 명시적 형변환
-* 명시적 형 변환(다운 캐스팅, Down Casting)은 
+* 명시적 형 변환(다운 캐스팅, Down Casting)은 타입이 서로 일치하지 않는 변수에 값을 할당할 때 묵시적 형변환이 발생할 수 없는 조건이어서, 형변환 연산(`(T)`)을 통해 강제적으로 타입을 변환하는 것이다.
+*  주로 보다 작은 기초 타입의 변수에 큰 값을 할당하거나, 자식 타입의 변수에 부모 객체를 할당할 때 사용한다.
 
