--- a/5. JAVA/07. 메서드.md
+++ b/5. JAVA/07. 메서드.md
@@ -15,7 +15,7 @@
 >* 해당 메서드에 반환 타입이 있을 경우(void 가 아닌 경우) 반드시 모든 경우의 수에 return 키워드를 사용하여 타입에 부합하는 값을 반환하거나 throw 키워드를 사용하여 예외를 발생시켜야 한다
 ## 매개 변수
 * 매개 변수(parameter)는 메서드가 요구하는 변수 구성이다
-* 해당 ㅂ메서드를 호출할 때 요구되는 매개 변수에 대해 전달하는 값을 전달 인자(Argument)라고 한다
+* 해당 메서드를 호출할 때 요구되는 매개 변수에 대해 전달하는 값을 전달 인자(Argument)라고 한다
 * 명명법 : 카멜 케이스
 * 매개변수의 구조는 아래와 같다
 ```java
