--- a/5. JAVA/12. 클래스.md
+++ b/5. JAVA/12. 클래스.md
@@ -1,6 +1,6 @@
-# 클래스
-* 클래스(Class)는 서로 관련있는 멤버(변수 및 메서드 등) 의 집합이다
-* 접근 제한자가 public 인 클래스의 이름은 해당 클래스가 위치하는 **파일의 이름**과 같아야 한다
+# <span style="color : #9e7efe; ">클래스
+* 클래스(Class)는 ***`서로 관련있는 멤버(변수 및 메서드 등) 의 집합이다`***
+* 접근 제한자가 **`public 인 클래스의 이름`은 해당 클래스가 위치하는 `파일의 이름`과 같아야 한다**
 * 명명법 : 파스칼 케이스
 * 클래스의 구조는 아래와 같다
 >```java
@@ -10,9 +10,9 @@
 >* final : 해당 클래스를 **최종 클래스로 지정하고 더 이상 상속 할 수 없는 대상으로 지정**한다
 >* extends : **상속 받을 클래스 한 개를 지정**한다
 >* implements : 구현할 인터페이스 한 개 이상을 지정한다
-## 객체
-* 객체(instance)는 객체화 연산( new )을 통해 참조 타입이 객체화된 대상을 의미한다
-## 생성자
+## <span style="color : #9efe7e; ">객체
+* 객체(instance)는 **객체화 연산( new )을 통해 참조 타입이 객체화된 대상**을 의미한다
+## <span style="color : #9efe7e; ">생성자
 * 생성자(Constructor)는 **클래스가 객체화될 때 반드시 실행되는 일종의 메서드**이다
 * 클래스 객체화 연산(new)시 타입 뒤에 적는 괄호( ( ) )는 생성자 호출이다
 ```java
@@ -37,7 +37,7 @@ public [클래스 이름]() {
     super();
 }
 ```
-## 상속
+## <span style="color : #9efe7e; ">상속
 * 상속(Inheritance)은 어떠한 클래스가 **다른 클래스로 하여금 다른 클래스의 기능을 그대로 물려받아 새로운 기능을 확장시키기 위해 사용**한다
 * 어떠한 클래스에게 **`상속받을 클래스를 명시하지 않을 경우` 모든 클래스는 자동으로 Object (java.lang.Object) 클래스를 상속 받는 것**으로 한다
 * `최종(final)으로 명시된 클래스`는 **상속 대상일 수 없다**
