--- a/5. JAVA/13. 패키지,접근 제한자.md
+++ b/5. JAVA/13. 패키지,접근 제한자.md
@@ -8,4 +8,4 @@
 >>* public : 접근을 제한하지 않는다
 >>* protected : 같은 패키지 경로를 가지거나 상속 관계에 있는 대상으로 접근을 제한한다
 >>* (default) : 같은 패키지 경로를 가지는 대상으로 접근을 제한한다. 단, 실제로 `default`라는 키워드를 적는것이 아닌 접근 제한자를 생략하는 것임에 유의한다.
-* private: 동일 클래스 내에서만 접근을 허용한다.
+>>* private: 동일 클래스 내에서만 접근을 허용한다.
