--- a/4. DBMS/01.개념.md
+++ b/4. DBMS/01.개념.md
@@ -1,6 +1,6 @@
 # 개념
-* DBMS(Database Management System)는 웹 개발 뿐만 아니라 서버(혹은 서비스 제공자 등)가 클라이언트(혹은 일반적인 사용자)에게 서비스를 제공하는데 있어, 소실되면 안 되고 유지, 기억해야하는 내용을 SQL을 통해 쉽게 처리하기 위해 사용하는 일련의 체계이다
-* SQL(Structured Query Language)은 DBMS가 가지는 구조 및 데이터를 통제하기 위해 사용하는 언어이다. 줄여서 쿼리(Query)라고도 한다
+* DBMS(Database Management System)는 웹 개발 뿐만 아니라 서버(혹은 서비스 제공자 등)가 클라이언트(혹은 일반적인 사용자)에게 서비스를 제공하는데 있어, **소실되면 안 되고 유지, 기억해야하는 내용을 SQL을 통해 쉽게 처리하기 위해 사용하는 일련의 체계**이다
+* SQL(Structured Query Language)은 **DBMS가 가지는 구조 및 데이터를 통제하기 위해 사용하는 언어**이다. 줄여서 쿼리(***`Query`***)라고도 한다
 * DBMS는 국가 SQL은 언어로 보면된다
 # 규칙
 * 키워드는 대문자로 작성하는 것이 권장되나 소문자로 작성해도 문제는 없다 단, 섞어서 작성해선 안된다
