--- a/5. JAVA/5-1. JDBC/02. 드라이버지정.md
+++ b/5. JAVA/5-1. JDBC/02. 드라이버지정.md
@@ -45,26 +45,26 @@
     * **execute()** : 호출 대상이 가지고 있는 쿼리를 실행하여 반환된 결과가 레코드인지의 여부를 반환한다 (잘 안쓴다)
     * **executeUpdate()** : 호출 대상이 가지고 있는 쿼리를 실행하여 영향을 받은 레코드의 개수를 반환한다. 쿼리가 ***레코드와 `직접적인 관련이 없는 경우` -1 을 반환***한다. 주로 **INSET, UPDATE, DELETE 등의 쿼리를 실행하기 위해 사용**한다
     * **executeQuery()** : 호출 대상이 **가지고 있는 쿼리를 실행하여 반환 되는 레코드 데이터를 ResultSet 타입의 객체로 반환**한다. 주로 **DELETE 쿼리를 실행하기 위해 사용**한다
-    * **setDouble(int p, double v)** : 호출 대상이 가지고 있는 쿼리의 `p`번째 인자 값을 `v`로 지정한다
-    * **setFloat(int p, float v)** : 호출 대상이 가지고 있는 쿼리의 `p`번째 인자 값을 `v`로 지정한다
-    * **setInt(int p, int v)** : 호출 대상이 가지고 있는 쿼리의 `p`번째 인자 값을 `v`로 지정한다
-    * **setLong(int p, long v)** : 호출 대상이 가지고 있는 쿼리의 `p`번째 인자 값을 `v`로 지정한다
-    * **setString(int p, String v)** : 호출 대상이 가지고 있는 쿼리의 `p`번째 인자 값을 `v`로 지정한다
+    * **setDouble(int p, double v)** : 호출 대상이 가지고 있는 **쿼리의 `p`번째 인자 값을 `v`로 지정**한다
+    * **setFloat(int p, float v)** : 호출 대상이 가지고 있는 **쿼리의 `p`번째 인자 값을 `v`로 지정**한다
+    * **setInt(int p, int v)** : 호출 대상이 가지고 있는 **쿼리의 `p`번째 인자 값을 `v`로 지정**한다
+    * **setLong(int p, long v)** : 호출 대상이 가지고 있는 **쿼리의 `p`번째 인자 값을 `v`로 지정**한다
+    * **setString(int p, String v)** : 호출 대상이 가지고 있는 **쿼리의 `p`번째 인자 값을 `v`로 지정**한다
 ## ResultSet
-* ResultSet(java.sql.ResultSet)인터페이스는 실행한 쿼리가 가지고 있는 레코드 결과 값을 담기 위해 사용한다
+* ResultSet(java.sql.ResultSet)인터페이스는 ***실행한 쿼리가 가지고 있는 레코드 결과 값을 담기 위해 사용***한다
 * Result 인터페이스는 이가 가진 추상적인 부분을 직접 구현하여 사용하는것이 아닌 상기 PreparedStatement 객체의 executeQuery 메서드를 통해 아래와 같이 객체를 반환받아야 한다
 ```java
 ResultSet resultSet = stmt.executeQuery();
 ```
-* ResultSet 객체 사용 후 반드시 이가 가지는 close 메서드를 호출하여 연결을 해제해 주어야 가용 리소스가 DBMS 로 회수된다.
-* ResultSet 객체가 가진 레코드 데이터에는 순서(인덱스)가 없음으로 next 메서드를 통한 포인트를 옮겨 반복해야한다 (일반 for 반목문, 향상된 for 반복문 등은 사용불가)
+* ResultSet 객체 사용 후 반드시 이가 가지는 **close 메서드를 호출하여 연결을 해제해 주어야 가용 리소스가 DBMS 로 회수**된다.
+* ResultSet 객체가 가진 **레코드 데이터에는 순서(인덱스)가 없음으로 next 메서드를 통한 포인트를 옮겨 반복**해야한다 (일반 for 반목문, 향상된 for 반복문 등은 사용불가)
 * 객체 메서드
-    * getDouble(String c) : 호출 대상이 가리키고 있는 레코드의 데이터 중 열 이름이 c 인 큰 실수(double)데이터를 반환한다
-    * getFloat(String c) : 호출 대상이 가리키고 있는 레코드의 데이터 중 열 이름이 c 인 작은 실수(float)데이터를 반환한다
-    * getInt(String c) : 호출 대상이 가리키고 있는 레코드의 데이터 중 열 이름이 c 인 일반 정수(int)데이터를 반환한다
-    * getLong(String c) : 호출 대상이 가리키고 있는 레코드의 데이터 중 열 이름이 c 인 큰 정수(long)데이터를 반환한다
-    * getString(String c) : 호출 대상이 가리키고 있는 레코드의 데이터 중 열 이름이 c 인 문자열 객체를 반환한다
-    * getTimestamp(String c) : 호출 대상이 가리키고 있는 레코드의 데이터 중 열 이름이 c 인 날짜 및 시간(java.util.Date)객체를 반환한다(getDate 메서드 또는 시간을 제외한 날짜만 반환함에 유의한다)
-    * next
+    * **getDouble(String c)** : 호출 대상이 가리키고 있는 레코드의 데이터 중 열 이름이 c 인 큰 실수(double)데이터를 반환한다
+    * **getFloat(String c)** : 호출 대상이 가리키고 있는 레코드의 데이터 중 열 이름이 c 인 작은 실수(float)데이터를 반환한다
+    * **getInt(String c)** : 호출 대상이 가리키고 있는 레코드의 데이터 중 열 이름이 c 인 일반 정수(int)데이터를 반환한다
+    * **getLong(String c)** : 호출 대상이 가리키고 있는 레코드의 데이터 중 열 이름이 c 인 큰 정수(long)데이터를 반환한다
+    * **getString(String c)** : 호출 대상이 가리키고 있는 레코드의 데이터 중 열 이름이 c 인 문자열 객체를 반환한다
+    * **getTimestamp(String c)** : 호출 대상이 가리키고 있는 레코드의 데이터 중 열 이름이 c 인 날짜 및 시간(java.util.Date)객체를 반환한다(getDate 메서드 또는 시간을 제외한 날짜만 반환함에 유의한다)
+    * **next** :  가리키고 있는 포인트를 다음으로 옮기고 가리킬 대상이 있는가의 여부를 반환한다
 ### 드라이버 지정을 위해 가져올 repository 를 찾기위한 사이트
 * https://mvnrepository.com/
