--- a/3. JS/3-1. XHR/01. XHR.md
+++ b/3. JS/3-1. XHR/01. XHR.md
@@ -1,7 +1,7 @@
 # XHR
 * XHR(XML Http Request) 기술은 `자바스크립트의 XMLHttprequest 객체를 통해 구현할 수 있다.` 흔히 AJAX (Asynchronous JavaScript and XML)라고 부르기도 한다
-* 페이지 새로고침 없이 비동기적으로 서버에 요청을 보내고 응답을 받아오기 위해 사용한다. 사용자 경험(UX User Experience)에 긍정적인 영향을 줌으로 많이 사용하는 편이다
-* 일반적으로 아래 구조와 같이 구현할 수 있따
+* ***페이지 새로고침 없이 비동기적으로 서버에 요청을 보내고 응답을 받아오기 위해*** 사용한다. 사용자 경험(UX User Experience)에 긍정적인 영향을 줌으로 많이 사용하는 편이다
+* 일반적으로 아래 구조와 같이 구현할 수 있다
 ```js
 const xhr = new XMLHttpRequest();
 xhr.onreadystatechange = function () {
@@ -34,8 +34,8 @@ xhr.send([요청 데이터]?);
     * 405 : Method Not Allowed. **경로는 존재**하지만 ***해당 요청 방식(Method)으로 접근할 수 없다***는 의미이다.
     * 500 : Internal Sever Error. 요청을 처리하는 도중 ***서버 내부에서 오류가 발생했다***는 의미이다
 ## 객체 메서드
-* abort() : send 메서드 호출 이후 요청에 대한 응답 대기를 취소한다
-* open(n, u) : 요청을 보낼 준비를 하기 위해 호출한다. 요청을 보낼 형식(Method)인 문자열을 n, 주소인 문자열을 u 에 전달한다
+* abort() : send 메서드 호출 이후 **요청에 대한 응답 대기를 취소**한다
+* open(n, u) : **요청을 보낼 준비를 하기 위해 호출**한다. 요청을 ***보낼 형식(Method)인 문자열을 n, 주소인 문자열을 u 에 전달***한다
 * send(d) : 요청을 실질적으로 전송한다. 이 때 d 는 요청에 함께 보낼 데이터이며, 보낼 데이터가 없다면 생략이 가능하다. 단, 요청 방식(open 메서드의 n 인자)이 GET 일 경우 데이터 인자( d ) 전달이 불가능하다
 ## 객체 이벤트
 * onabort : 응답 대기 상태에서 abort 메서드가 호출되었을 때 실행할 이벤트 함수
