--- a/6. SPRING/03. 에너테이션.md
+++ b/6. SPRING/03. 에너테이션.md
@@ -5,3 +5,7 @@
   - `method`: 해당 맵핑이 받아들일 요청 방식(Method)을 `RequestMethod`(`org.springframework.web.bind.annotation.RequestMethod`)가 가지는 멤버로 지정한다
   - `produces`: 해당 맵핑의 응답 결과인 컨텐트 타입(`Content-Type`)을 `MediaType`(`org.springframework.http.MediaType`)으로 지정한다
   - `value`: 해당 맵핑의 경로를 문자열로 지정한다 
+* ***@RequestParam (매개변수)*** : 클라이언트가 **요청과 `함께 보낸 데이터를 매개 변수에 할당`하기 위해 사용**한다
+  * **value** : 데이터의 이름을 지정한다. 대표적인 예로 `<input>`태크가 가지는 name 속성 값도 일치해야한다
+  * **default** : 해당 매개변수에 할당할 데이터가 없을 경우 사용할 기본 값을 문자열로 지정한다
+  * **required** : 해당 **매개 변수에 할당할 데이터가 반드시 있어야하는가의 여부**이다. 생략시 `true`로 설정되며 **해당 매개 변수에 `할당할 값 없이는 해당 요청을 처리할 수 없게 `된다**
