--- a/6. SPRING/03. 에너테이션.md
+++ b/6. SPRING/03. 에너테이션.md
@@ -9,3 +9,6 @@
   * **value** : 데이터의 이름을 지정한다. 대표적인 예로 `<input>`태크가 가지는 name 속성 값도 일치해야한다
   * **default** : 해당 매개변수에 할당할 데이터가 없을 경우 사용할 기본 값을 문자열로 지정한다
   * **required** : 해당 **매개 변수에 할당할 데이터가 반드시 있어야하는가의 여부**이다. 생략시 `true`로 설정되며 **해당 매개 변수에 `할당할 값 없이는 해당 요청을 처리할 수 없게 `된다**
+* **@Service (클래스)** : 해당 **클래스가 스프링 MVC 패턴의 서비스**임을 컴퓨터에 알리는 용도 **value 서비스 식별자 지정하고 생략시 클래스 이름인 문자열을 이용**한다
+* **@Autowired (생성자 멤버 변수)** : 해당 메서드가 가지는 매개 변수 혹은 멤버 변수를 스프링 프레임워크가 직접 객체화하여 전달해야 함을 의미한다. 단, 이는 스프링 프레임워크가 인식 가능한 대상이어야 한다. (의존성 주입, DI(Dependence / Injection))
+* **@ResponseBody (메서드)** : 해당 메서드의 ***반환 타입이 문자열 (String) 일 때 템플릿을 `뷰로 처리하는 것이 아닌 문자열 그대로가 응답으로 반환`되어야 함을 지정***한다. 반환 타입이 문자열일 때 뿐만 아니라 **응답 결과가 클라이언트에게 그대로 전달되어야 할 때 해당 에너테이션을 부여**한다
