--- a/5. JAVA/13. 클래스 종류.md
+++ b/5. JAVA/13. 클래스 종류.md
@@ -91,6 +91,7 @@ int intValue = num.intValue(); // 사용예시 // 다른 객체 메서드들도 
 int[] ia = {1,2,3};
 int[] ib = {1,2,3};
 System.out.println(Arrays.equals(ia, ib));
+// 결과값 true
 ```
 * fill(T[] t, T v) : 배열 t 가 가지는 모든 인자의 값을 v 로 재할당 한다
 * sort(T[] t) : 숫자 타입(byte, short, int, long, float, double)의 타입인 배열 t 가 가지는 인자를 오름차순으로 정렬한다
