--- a/5. JAVA/10. String 클래스.md
+++ b/5. JAVA/10. String 클래스.md
@@ -23,7 +23,7 @@
         * %x.ns 및 %-x.ns 등의 형태로 조합하여 사용할 수 있다
 * **join(charSequence d, charSequence... as)** : d의 인자에 as 를 이어 붙인 문자열을 반환한다
 * **valueOf(char|int|long|float|double x)** : **숫자형인 x 를 문자열로 반환**한다
-* **valueOf(char[] x)** : 문자 배열 x 가 가진 문자 (char) 인자들을 이어 붙인 문자열을 반환한다 copyValueOf 메서드와 동일한 역할을 한다
+* **valueOf(char[] x)** : 문자 배열 x 가 가진 **문자 (char) 인자들을 이어 붙인 문자열을 반환**한다 copyValueOf 메서드와 동일한 역할을 한다
 >* 대표적인게 
 >```java
 >public static void main(String[] args)
@@ -31,6 +31,28 @@
 >* 에서 main 이 되겠다 구별은 static 을 통해 알 수 있다
 ## 객체 메서드
 * **length()** : 호출 대상인 **문자열의 길이를 반환**한다
+* **[`선택`]** **charAt(int i)** : 호출 대상인 문자열이 가지는 문자 중 i 번째 문자를 반환한다. 순번(인덱스)는 0 부터 시작한다
+* **[`필수`]** **concat(String s)** : 호출 대상인 문자열의 내용 끝에 s 를 이어 붙인 새로운 문자열을 반환한다
+* **[`필수`]** **contains(CharSequence s)** : 호출 대상인 문자열의 내용에 인자 s 가 포함되어 있는가의 여부를 반환한다
+* **[`권장`]** **endsWith(String s)** : 호출 대상인 문자열의 내용이 s 로 끝나는 가의 여부를 반환
+* **[`필수`]** **equals(Object o)** : 전달 받은 인자 o 가 문자열이라면 호출 대상인 문자열이 가지는 내용과 o 가 가지는 내용이 같은가의 여부를 반환한다
+* **[`권장`]** **equalsIgnoreCase(String s)** : equals 와 동일하나 **`대소문자를 가리지 않는다`**
+* **[`선택`]** **indexOf(String s)** : 호출 대상인 **문자열이 가지는 내용 중 s 와 일치하는 첫 번째 순번(인덱스)을 반환**한다 일치하는 내용이 없다면 -1을 반환한다
+* **[`선택`]** **lastIndexOf(String s)** : 호출 대상인 **문자열이 가지는 내용 중 s 와 일치하는 마지막 순번(인덱스)을 반환**한다 일치하는 내용이 없다면 -1을 반환한다
+* **[`필수`]** **length()** : 호출 대상인 문자열의 길이를 반환한다
+* **[`선택`]** **matches(String r)** : 호출 대상인 문자열이 가지는 내용이 정규표현식 r 을 만족하는 가의 여부를 반환한다
+* **[`선택`]** **repeat(int i)** : 문자열의 내용을  i 번 반복한 새로운 문자열을 반환한다.
+* **[`필수`]** **replace(CharSequence f, CharSequence t)**: 호출 대상인 문자열이 가지는 내용 중 `f`를 찾아 `t`로 치환한 새로운 반환한다.
+* **replaceAll(String r, String t)**: 호출 대상인 문자열이 가지는 내용 중 ***정규표현식 `r`을 만족하는 내용을 `t`로 치환한 새로운 문자열을 반환***한다.
+* **[`필수`]** **split(String r)** : 호출 대상인 문자열이 가지는 내용에서 ***r 을 기준으로 나눈 문자열 배열(String[])을 반환한다. 반환된 배열이 가지는 인자의 문자열의 내용을 나누는 기준인 r 을 포함하지 않는다***
+* **[`권장`]** **startsWith(String s)** : 호출 대상인 ***문자열의 내용이 s 로 시작하는 가의 여부를 반환*** (true,false 중 하나가 출력 값이다)
+* **[`필수`]** **strip()** : 호출 대상인 문자열의 내용에서 ***선후행하는 연속된 공백을 모두 제거한 새로운 문자열을 반환***한다
+* **[`권장`]** **stripLeading()** : 호출 대상인 ***문자열의 내용에서 선행하는 연속된 공백을 모두 제거한 새로운 문자열을 반환***한다
+* **[`권장`]** **stripTrailing()** : 호출 대상인 ***문자열의 내용에서 후행하는 연속된 공백을 모두 제거한 새로운 문자열을 반환***한다
+* **[`필수`]** **substring(int f, int t)** : 호출 대상인 문자열이 가지는 내용에서 ***순번이 f 이상 t 미만인 문자열을 반환***한다
+* **[`선택`]** **toCharArray()** : 호출 대상인 문자열이 가지는 ***내용을 문자 배열(char[])로 반환***한다
+* **[`필수`]** **toLowerCase()** : 호출 대상인 문자열이 가지는 내용 중 ***모든 라틴 문자를 소문자화 하여 반환***한다
+* **[`필수`]** **toUpperCase()** : 호출 대상인 문자열이 가지는 내용 중 ***모든 라틴 문자를 대문자화 하여 반환***한다
 
 ### 정적 메서드와 객체 메서드 차이
 * 정적 메서드는 String 을 통해서만 접근해야하고
