--- a/6. SPRING/02. 웹.md
+++ b/6. SPRING/02. 웹.md
@@ -58,3 +58,7 @@
 >* static 디렉터리 아래에 css 와 js 파일을 생성하고, 위 HTML 파일에 연결했다
 >>* static 디렉터리는 루트(http://localhost:8080/) 부터 시작하는 맵핑이다
 >>* 모든 정적인 리소스는 resource 디렉터리 아래에 컨트롤러 이름(MemoController 를 위한 정적 리소스는 templates/memo/ 아래) 을 가지는 디렉터리를 만들고, 그 아래에 종류별로(CSS : stylesheets, JS : scripts, IMG : image 등) 분류를 했다
+>>* html파일의 주소는 보통 아래와 같이 된다
+>>>* 예시) **http:// localhost:8080/대상/동작**
+>>>*       http:// localhost:8080/클래스/메서드
+
