--- a/6. SPRING/05. MyBatis.md
+++ b/6. SPRING/05. MyBatis.md
@@ -94,7 +94,7 @@
 >    </select>
 ></mapper>
 >```
->* 위의 코드에서 **xml 파일에 적용할 Entity 파일을 가지고 와야 하는데** 이를 select 태그(update, delete, insert 등 의 태그에도 포함이된다) 에 `resultType 속성을 부여하여 가지고 올 수 있다` resultType의 값으로는 mapper 태그의 namespace와 같이 해당 entity 가 위치한 패키지 위치+해당 파일 이름 을 넣어 주면된다
+>* 위의 코드에서 **xml 파일에 적용할 Entity 파일을 가지고 와야 하는데** 이를 select 태그(update, delete, insert 등 의 태그에도 포함이된다) 에 `resultType 속성을 부여하여 가지고 올 수 있다` resultType의 값으로는 mapper 태그의 namespace와 같이 해당 entity 가 위치한 패키지 위치+해당 파일의 이름 을 넣어 주면된다
 >* SELECT 를 사용할때 자동 완성이 되지 않는다면 alt+enter를 하여 찾을 수 있다
 
 #### 표현식
@@ -104,6 +104,18 @@
 * `<select>` : SELECT 쿼리를 담기 위해 사용한다
     * id : **[필수]** 연결된 인터베이스의 연결될 메서드 이름과 일치해야한다
     * resultType : **[필수]** 해당 쿼리의 실행결과로 반환할 자바 타입의 전체 경로를 명시한다. 연결된 인터페이스 메서드의 반환 타입과 일치해야한다
+    * parameterType : 연결된 메서드가 매개 변수를 한 개만 가지고 이가 `@Param` 어노테이션을 가지고 있지 않다면, 이의 타입을 명확하게 지정하기 위해 사용한다
+* `<insert>` : INSERT 쿼리를 담기 위해 사용한다
+    * id : **[필수]** 연결된 인터베이스의 연결될 메서드 이름과 일치해야한다
+    * keyColum :
+    * keyProperty :
+    * useGeneratedKeys : 
+    * parameterType : 연결된 메서드가 매개 변수를 한 개만 가지고 이가 `@Param` 어노테이션을 가지고 있지 않다면, 이의 타입을 명확하게 지정하기 위해 사용한다
+* `<update>` : UPDATE 쿼리를 담기 위해 사용한다
+    * id : **[필수]** 연결된 인터베이스의 연결될 메서드 이름과 일치해야한다
+    * parameterType : 연결된 메서드가 매개 변수를 한 개만 가지고 이가 `@Param` 어노테이션을 가지고 있지 않다면, 이의 타입을 명확하게 지정하기 위해 사용한다
+* `<delete>` : DELETE 쿼리를 담기 위해 사용한다
+    * id : **[필수]** 연결된 인터베이스의 연결될 메서드 이름과 일치해야한다
     * parameterType : 연결된 메서드가 매개 변수를 한 개만 가지고 이가 `@Param` 어노테이션을 가지고 있지 않다면, 이의 타입을 명확하게 지정하기 위해 사용한다
 #### 어노테이션
 * @Mapper (인터페이스) : 해당 인터페이스가 MyBatis Mapper 임을 알린다
