--- a/6. SPRING/03. 에너테이션.md
+++ b/6. SPRING/03. 에너테이션.md
@@ -12,3 +12,16 @@
 * **@Service (클래스)** : 해당 **클래스가 스프링 MVC 패턴의 서비스**임을 컴퓨터에 알리는 용도 **value 서비스 식별자 지정하고 생략시 클래스 이름인 문자열을 이용**한다
 * **@Autowired (생성자 멤버 변수)** : 해당 메서드가 가지는 매개 변수 혹은 멤버 변수를 스프링 프레임워크가 직접 객체화하여 전달해야 함을 의미한다. 단, 이는 스프링 프레임워크가 인식 가능한 대상이어야 한다. (의존성 주입, DI(Dependence / Injection))
 * **@ResponseBody (메서드)** : 해당 메서드의 ***반환 타입이 문자열 (String) 일 때 템플릿을 `뷰로 처리하는 것이 아닌 문자열 그대로가 응답으로 반환`되어야 함을 지정***한다. 반환 타입이 문자열일 때 뿐만 아니라 **응답 결과가 클라이언트에게 그대로 전달되어야 할 때 해당 에너테이션을 부여**한다
+* `@Service` (클래스): 해당 클래스가 스프링 MVC 패턴의 서비스임을 알린다.
+  * `value`: 서비스 식별자 지정. 생략시 클래스 이름인 문자열을 대용한다.
+
+### Lombok
+
+* **`@Getter`** (클래스) : 해당 엔티티 클래스가 가지는 멤버 변수에 대한 게터(Getter) 메서드를 자동으로 생성해 준다.
+* **`@Setter`** (클래스) : 해당 엔티티 클래스가 가지는 멤버 변수에 대한 세터(Setter) 메서드를 자동으로 생성해 준다.
+* **`@Data`** (클래스) : `@Getter` 및 `@Setter` 등의 어노테이션을 합친것과 같다.
+* **`@Builder`** (클래스) : 해당 엔티티 클래스의 생성 방식을 빌더로 설정한다.
+* **`@EqualsAndHashCode`** (클래스) : 해당 엔티티 클래스가 가지는 `equals()` 메서드 및 `hashCode()` 메서드를 재정의해준다. 별도의 설정이 없다면 이가 가지는 모든 멤버 변수에 대한 동등 비교 로직을 작성한다.
+  * **`of` :** 동등 비교 대상으로 지정할 멤버 변수의 이름을 문자열로 한 개 이상 지정한다.
+* **`@AllArgsConstructor`** : 해당 엔티티 클래스가 가지는 모든 멤버 변수를 전달 받는 생성자를 만들어 준다.
+* **`@NoArgsConstructor`** : 매개 변수가 없는 생성자를 만들어 준다. (기본 생성자)
